--- a/src/ui/styles/_customScrollbar.scss
+++ b/src/ui/styles/_customScrollbar.scss
@@ -1,6 +1,6 @@
 .customScrollbar {
 
-	$size: 6px;
+	$size: 8px;
 
 	::-webkit-scrollbar {
 		width: $size;
@@ -9,21 +9,32 @@
 	}
 
 	::-webkit-scrollbar-track {
-		background: transparent;
-	}
-
-	::-webkit-scrollbar-thumb {
-		background-color: rgba(255, 255, 255, .5);
+		background: rgba(255, 255, 255, 0.03);
 		border-radius: math.div($size, 2);
 	}
 
+	::-webkit-scrollbar-thumb {
+		background-color: rgba(115, 250, 200, 0.3);
+		border-radius: math.div($size, 2);
+		border: 1px solid rgba(115, 250, 200, 0.1);
+		
+		&:hover {
+			background-color: rgba(115, 250, 200, 0.5);
+			border: 1px solid rgba(115, 250, 200, 0.2);
+		}
+		
+		&:active {
+			background-color: rgba(115, 250, 200, 0.7);
+		}
+	}
+
 	::-webkit-scrollbar-corner {
-		display: none;
+		background: transparent;
 	}
 
 	* {
 		scrollbar-width: thin;
-		scrollbar-color: rgba(255, 255, 255, .5) transparent;
+		scrollbar-color: rgba(115, 250, 200, 0.3) rgba(255, 255, 255, 0.03);
 	}
 
 }
